Improve auths by modularizing with the ‘iam’ package
